changed background to black

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+/git
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: 'Cool Font', sans-serif;
+            color: white;
+            font-size: 24px;
+        }
+    </style>
+</head>
+<body>
+    <div>This site is under development</div>
+</body>
+</html>
